[Auth] Add api token auth [ErrorHandler] Add error handler for login service
